coala-decorators: Rename to coala-utils

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ norecursedirs =
     .env
     env
 testpaths =
-    coala_decorators
+    coala_utils
     tests
 python_files = *Test.py
 python_classes = *Test
@@ -27,7 +27,7 @@ env =
 branch = True
 cover_pylib = False
 source =
-    coala_decorators
+    coala_utils
 
 [coverage:report]
 show_missing = True
