setup.cfg: Enable coverage report

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,7 @@ addopts =
     --doctest-glob=*.rst
     --doctest-modules
     --doctest-ignore-import-error
+    --cov=coala_utils
     -r s
 env =
     PYTHONHASHSEED=0
