--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,16 +1,14 @@
-image: python:3.5
-
 cache:
   paths:
   - .tox
 
-before_script:
-  - pip install tox==2.3.1
-
 static_analysis:
+  image: coala/base:0.8
   script:
-   - tox -e static_analysis
+   - coala-ci
 
 tests:
+  image: python:3.5-alpine
   script:
+   - pip install tox==2.3.1
    - tox -e tests
