FilePathcompleter: Use pyreadline for windows
* GNU readline is not available on Windows. Tries to import
  pyreadline if the readline module is not found.
* Adds coverage plugins that set the environment markers
  needed to enforce OS specific coverage.

Fixes https://gitlab.com/coala/coala-utils/issues/40

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,14 +24,23 @@ env =
     PYTHONHASHSEED=0
 # PYTHONHASHSEED=0 is required to use same hashes in pytests-xdist's workers
 
+[coverage:coverage_env_plugin]
+markers = True
+
 [coverage:run]
 branch = True
 cover_pylib = False
 source =
     coala_utils
+plugins =
+    coverage_env_plugin
+    coverage_config_reload_plugin
 
 [coverage:report]
 fail_under = 100
 show_missing = True
 skip_covered = False
 sort = Miss
+exclude_lines =
+    pragma: no ?cover
+    pragma ${PLATFORM_SYSTEM}: no cover
