--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,5 +16,5 @@ tests:
   script:
     - apk add --no-cache git
     - pip install tox~=2.7 codecov~=2.0.5
-    - tox -e tests
+    - tox -e tests --develop
     - codecov
