Build setup.py and requirements.txt using moban
coala-mobans provides a set of metadata common to
all repositories, with local overrides.

Related to https://github.com/coala/meta/issues/117

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,13 @@
+moban:
+  image: python:3.5
+  before_script:
+    - pip install moban
+    - git clone https://github.com/moremoban/setupmobans ../setupmobans
+    - git clone https://gitlab.com/coala/mobans ../coala-mobans
+  script:
+    - moban
+    - git diff --exit-code
+
 cache:
   paths:
     - .tox
