.gitlab-ci.yml: Add testing on Python 3.4 and 3.6

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,5 @@
 [tox]
-envlist = static_analysis,tests
-
-[testenv]
-basepython = python3.5
+envlist = static_analysis,py34,py35,py36
 
 [testenv:static_analysis]
 deps =
@@ -10,7 +7,7 @@ deps =
 commands =
   coala-ci
 
-[testenv:tests]
+[testenv]
 deps =
   -rrequirements.txt
   -rtest-requirements.txt
