--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,11 +10,26 @@ static_analysis:
     - pip install 'coala-bears[alldeps]'
     - coala --ci
 
-tests:
+.common_test_script: &common_test_script
+  - apk add --no-cache git
+  - pip install tox~=2.7 codecov~=2.0.5
+  - tox --develop
+  - codecov
+
+tests:3.4:
+  image: python:3.4-alpine
+  variables:
+    TOXENV: py34
+  script: *common_test_script
+
+tests:3.5:
   image: python:3.5-alpine
-  coverage: '/\d+\%\s*$/'
-  script:
-    - apk add --no-cache git
-    - pip install tox~=2.7 codecov~=2.0.5
-    - tox -e tests --develop
-    - codecov
+  variables:
+    TOXENV: py35
+  script: *common_test_script
+
+tests:3.6:
+  image: python:3.6-alpine
+  variables:
+    TOXENV: py36
+  script: *common_test_script
