requirements.txt: Use pyprint master
Related to https://github.com/coala/meta/issues/123
Related to https://gitlab.com/coala/coala-utils/issues/70
Related to https://gitlab.com/coala/PyPrint/issues/24

--- a/.moban.yaml
+++ b/.moban.yaml
@@ -14,7 +14,7 @@ docs_dir: false
 
 dependencies:
   - appdirs==1.4.*
-  - pyprint==0.2.*
+  - git+https://gitlab.com/coala/PyPrint#egg=pyprint
   - pyreadline~=2.1; platform_system == 'Windows'
 
 configuration:
