--- a/.moban.yaml
+++ b/.moban.yaml
@@ -10,7 +10,7 @@ version: 0.7.0-dev
 release: 0.7.0-dev
 build_version: 0.7.0
 package_module: coala_utils
-docs_output_dir: false
+docs_dir: false
 
 dependencies:
   - appdirs==1.4.*
@@ -22,7 +22,6 @@ configuration:
     - .moban.dt/
     - ../coala-mobans/templates/
     - ../coala-mobans/assets/
-    - ../setupmobans/templates/
   configuration: .moban.yaml
   configuration_dir: ../coala-mobans/
 targets:
