--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,6 @@
+variables:
+  XDG_CACHE_HOME: "$CI_PROJECT_DIR/.cache/"
+
 moban:
   image: python:3.5
   before_script:
@@ -9,8 +12,7 @@ moban:
 
 cache:
   paths:
-    - ~/.local/share/coala-bears/
-    - ~/.cache/pip
+    - .cache/pip
 
 static_analysis:
   image: python:3.5-alpine
