--- a/.moban.yaml
+++ b/.moban.yaml
@@ -25,9 +25,11 @@ configuration:
   configuration: .moban.yaml
   configuration_dir: ../coala-mobans/
 targets:
+  - .gitlab-ci.yml: ci/gitlab-ci.yml.jj2
   - setup.py: utils-setup.py.jj2
   - requirements.txt: requirements.txt.jj2
   - test-requirements.txt: test-requirements.txt.jj2
   - coala_utils/VERSION: VERSION.jj2
   - .ci/appveyor.yml: ci/appveyor.yml.jj2
   - .ci/run_with_env.cmd: run_with_env.cmd
+  - .ci/check_moban.sh: ci/check_moban.sh
