ContextManagers: Require coverage on Windows

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,5 +42,6 @@ show_missing = True
 skip_covered = False
 sort = Miss
 exclude_lines =
-    pragma: no ?cover
     pragma ${PLATFORM_SYSTEM}: no cover
+    pragma ${OS_NAME}: no cover
+
