setup.cfg: Use template

--- a/.moban.yaml
+++ b/.moban.yaml
@@ -27,6 +27,7 @@ configuration:
 targets:
   - .gitlab-ci.yml: ci/gitlab-ci.yml.jj2
   - setup.py: utils-setup.py.jj2
+  - setup.cfg: setup.cfg.jj2
   - requirements.txt: requirements.txt.jj2
   - test-requirements.txt: test-requirements.txt.jj2
   - coala_utils/VERSION: VERSION.jj2
