--- a/setup.cfg
+++ b/setup.cfg
@@ -1,28 +1,40 @@
-[pytest]
-norecursedirs =
-    .git
-    dist
-    build
-    venv
-    .env
-    env
+[bdist_wheel]
+python-tag = py34.py35.py36
+
+[tool:pytest]
+minversion = 3.6.1
+
 testpaths =
-    coala_utils
-    tests
+  coala_utils
+  tests
+
 python_files = *Test.py
 python_classes = *Test
-python_functions = *_test
-timeout = 35
+
 addopts =
-    --color=yes
-    --doctest-glob=*.rst
-    --doctest-modules
-    --doctest-ignore-import-error
-    --cov=coala_utils
-    -r s
-env =
-    PYTHONHASHSEED=0
-# PYTHONHASHSEED=0 is required to use same hashes in pytests-xdist's workers
+  -r a
+  -p no:logging
+  --color=yes
+  --doctest-glob=*.rst
+  --doctest-modules
+  --doctest-ignore-import-error
+  --error-for-skips
+  --cov
+  --instafail
+  --profile
+  --reorder 'requirements.txt' 'test-requirements.txt' '*'
+
+doctest_optionflags =
+  ELLIPSIS
+  IGNORE_EXCEPTION_DETAIL
+
+reqsfilenamepatterns =
+  requirements.txt
+  test-requirements.txt
+
+reqsignorevcs = True
+
+timeout = 35
 
 [coverage:coverage_env_plugin]
 markers = True
@@ -30,11 +42,15 @@ markers = True
 [coverage:run]
 branch = True
 cover_pylib = False
-source =
-    coala_utils
+
 plugins =
-    coverage_env_plugin
-    coverage_config_reload_plugin
+  coverage_env_plugin
+  coverage_config_reload_plugin
+
+source =
+  coala_utils
+
+omit = tests/*
 
 [coverage:report]
 fail_under = 100
@@ -42,6 +58,6 @@ show_missing = True
 skip_covered = False
 sort = Miss
 exclude_lines =
-    pragma ${PLATFORM_SYSTEM}: no cover
-    pragma ${OS_NAME}: no cover
-
+  pragma ${PLATFORM_SYSTEM}: no cover
+  pragma ${OS_NAME}: no cover
+  pragma Python [0-9.,]*${PYTHON_VERSION}[0-9.,]*: no cover
