--- a/setup.cfg
+++ b/setup.cfg
@@ -50,7 +50,9 @@ plugins =
 source =
   coala_utils
 
-omit = tests/*
+omit =
+  tests/*
+  setup.py
 
 [coverage:report]
 fail_under = 100
@@ -61,3 +63,5 @@ exclude_lines =
   pragma ${PLATFORM_SYSTEM}: no cover
   pragma ${OS_NAME}: no cover
   pragma Python [0-9.,]*${PYTHON_VERSION}[0-9.,]*: no cover
+
+[coverage:force_end_of_section]
