--- a/.ci/appveyor.yml
+++ b/.ci/appveyor.yml
@@ -42,8 +42,8 @@ install:
   - "python --version"
   - "python -c \"import struct; print(struct.calcsize('P') * 8)\""
   - "%CMD_IN_ENV% python -m pip install --upgrade setuptools==21 pip==9"
-  - "%CMD_IN_ENV% python -m pip install -r requirements.txt \
-    -r test-requirements.txt"
+  - "%CMD_IN_ENV% python -m pip install -r test-requirements.txt \
+    -r requirements.txt"
 
 build: false  # Not a C# project, build stuff at the test step instead.
 
