--- a/.moban.yaml
+++ b/.moban.yaml
@@ -25,6 +25,7 @@ configuration:
   configuration: .moban.yaml
   configuration_dir: ../coala-mobans/
 targets:
+  - .gitignore: coala-gitignore.jj2 
   - .gitlab-ci.yml: ci/gitlab-ci.yml.jj2
   - setup.py: utils-setup.py.jj2
   - setup.cfg: setup.cfg.jj2
